<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wedd"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadoweffect"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="52dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="47px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/signbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/button_signup"
        android:text="@string/signup_button"
        android:textAllCaps="false"
        android:textSize="44px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/phone"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="460dp"
        android:text="@string/phone_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40px"
        android:textStyle="bold"
        app:cornerRadius="177dp"
        app:icon="@drawable/phone"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#ffff"
        app:strokeWidth="1dp"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/google"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="520dp"
        android:text="@string/google_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40px"
        android:textStyle="bold"
        app:cornerRadius="177dp"
        app:icon="@drawable/google"
        app:strokeColor="@color/white"
        app:iconTint="#FFFFFF"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <Button
        android:id="@+id/facebook"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="580dp"
        android:text="@string/facebook_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40px"
        android:textStyle="bold"
        app:cornerRadius="177dp"
        app:icon="@drawable/facebook"
        app:iconTint="#FFFFFF"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        tools:ignore="PxUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>