<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A47EB"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:src="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:src="@drawable/shadoweffect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/logintitle"
        tools:ignore="SpUsage"
        android:layout_marginStart="15dp"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:text="@string/description"
        tools:ignore="SpUsage"
        android:layout_marginStart="15dp"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="1dp"
        app:strokeColor="@color/white"
        app:cornerRadius="177dp"
        android:id="@+id/signbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="356dp"
        android:text="@string/signup_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="44px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailinputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:hint="E-mail"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:helperText="*Required"
        app:helperTextTextColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.635"
        app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailinputedit"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordinputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:hint="Password"
        android:textColorHint="@color/white"
        app:counterEnabled="true"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:helperText="*Required"
        app:helperTextTextColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailinputlayout"
        app:layout_constraintVertical_bias="0.276"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordinputedit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberCb"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:buttonTint="@color/white"
        android:text="Remember Me"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginbtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="680dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="44px"
        android:textStyle="bold"
        app:cornerRadius="177dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot password ?"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />


</androidx.constraintlayout.widget.ConstraintLayout>